Co-authored-by: martinh118 <martinh118@users.noreply.github.com> avance del proyecto cajero

--- a/4_4_maquina_automatica/index.html
+++ b/4_4_maquina_automatica/index.html
@@ -109,13 +109,24 @@
                         <h2 id="pagamentTotal"></h2>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="pagar">
+                        <h2>Pagar</h2>
+                    </div>
+                    <div class="clear">
+                        <h2>Clear</h2>
+                    </div>
+                </div>
             </div>
-            <div class="col">
+            <div class="col" >
                 <h2>RETORN</h2>
+                <div id="retorn">
+
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+        <div class="row ">
+            <div class="caixa">
                 <h2>CAIXA</h2>
                 <div class="row">
                     <img src="./src/billete_50.png">
@@ -132,18 +143,18 @@
                     <img src="./src/moneda_1c.png" class="moneda">
                 </div>
                 <div class="row">
-           <!--50€--><input type="number" style="width:2.5em; margin-left: 40px;" min="0" value="3">
-            <!--20€--><input type="number" style="width:2.5em; margin-left: 70px;" min="0" value="5">
-            <!--10€--><input type="number" style="width:2.5em; margin-left: 70px;" min="0" value="10">
-            <!--5€--><input type="number" style="width:2.5em; margin-left: 70px;" min="0" value="15">
-            <!--2€--><input type="number" style="width:2.5em; margin-left: 50px;" min="0" value="20">
-            <!--1€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="25">
-            <!--0,50€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="25">
-            <!--0,20€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="20">
-            <!--0,10€--><input type="number" style="width:2.5em; margin-left: 45px;" min="0" value="20">
-            <!--0,05€--><input type="number" style="width:2.5em; margin-left: 40px;" min="0" value="15">
-            <!--0,02€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="15">
-            <!--0,01€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="10">
+           <!--50€--><input type="number" style="width:2.5em; margin-left: 40px;" min="0" value="3" id="caj50">
+            <!--20€--><input type="number" style="width:2.5em; margin-left: 70px;" min="0" value="5" id="caj20">
+            <!--10€--><input type="number" style="width:2.5em; margin-left: 70px;" min="0" value="10" id="caj10">
+            <!--5€--><input type="number" style="width:2.5em; margin-left: 70px;" min="0" value="15" id="caj5">
+            <!--2€--><input type="number" style="width:2.5em; margin-left: 50px;" min="0" value="20" id="caj2">
+            <!--1€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="25" id="caj1">
+            <!--0,50€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="25" id="caj05">
+            <!--0,20€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="20" id="caj02">
+            <!--0,10€--><input type="number" style="width:2.5em; margin-left: 45px;" min="0" value="20" id="caj01">
+            <!--0,05€--><input type="number" style="width:2.5em; margin-left: 40px;" min="0" value="15" id="caj005">
+            <!--0,02€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="15" id="caj002">
+            <!--0,01€--><input type="number" style="width:2.5em; margin-left: 35px;" min="0" value="10" id="caj001">
                 </div>
             </div>
         </div>
