--- a/4_4_maquina_automatica/index.html
+++ b/4_4_maquina_automatica/index.html
@@ -123,6 +123,10 @@
                 <div id="retorn">
 
                 </div>
+
+                <div id="imageReturn">
+                    
+                </div>
             </div>
         </div>
         <div class="row ">
